mystery hunt started

--- a/EC/templates/index.html
+++ b/EC/templates/index.html
@@ -101,10 +101,10 @@
               </div>
 
               <div class="img-icon">
-                <a href="{% url 'forum:forum_index' %}">
+                <a href="{% url 'mystery_hunt:hunt_index' %}">
                   <figure class="img-container">
-                    <img src="./static/imgs/icons/icon002.png" alt="Riddles" width="120">
-                    <figcaption>Riddles</figcaption>
+                    <img src="./static/imgs/icons/icon002.png" alt"Mystery Hunt" width="120">
+                    <figcaption>Mystery Hunt</figcaption>
                     </figure>
                 </a>
               </div>
