--- a/EC/templates/index.html
+++ b/EC/templates/index.html
@@ -53,7 +53,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url "raffle:draw"%}">
+                  <a class="nav-link" href="{% url "raffle:raffle_page"%}">
                     <i class="iconfont icon-tags-fill"></i>
                     <span>Raffle</span>
                   </a>
@@ -138,7 +138,7 @@
               </div>
 
               <div class="img-icon">
-                <a href="{% url 'forum:forum_index' %}">
+                <a href="{% url 'raffle:raffle_page' %}">
                   <figure class="img-container">
                     <img src="./static/imgs/icons/icon005.png" alt="Raffle" width="120">
                     <figcaption>Raffle</figcaption>
