--- a/EC/Apps/admin_panel/templates/menu.html
+++ b/EC/Apps/admin_panel/templates/menu.html
@@ -20,6 +20,10 @@
                 </li>
 
                 <li>
+                    <a href="{% url "admin_panel:ask_for_help" %}" class="pure-menu-link">Ask For Help</a>
+                </li>
+
+                <li>
                     <a href="{% url "admin_panel:find_friends" %}" class="pure-menu-link">Find Friends</a>
                 </li>
 
